kubernetes/demo-web.yaml
apiVersion: v1
kind: Pod
metadata:
  name: demo-web
  labels:
      role: web
spec:
  containers:
  - name: demo-web
    image: httpd
